<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activities.SignUpActivity"
    android:background="@drawable/background_img">

    <TextView
        android:id="@+id/SignUpActivityLabel"
        android:layout_width="366dp"
        android:layout_height="44dp"
        android:text="@string/sign_up_activity_label"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="323dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/sign_up_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/light_grey"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <EditText
        android:id="@+id/SignUpPassword"
        android:layout_width="324dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/sign_up_password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/light_grey"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/light_black_btn"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        app:strokeColor="#747775"
        app:strokeWidth="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>