<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activities.WelcomeActivity"
    android:background="@drawable/background_img">

    <Button
        android:id="@+id/Welcome_signup_btn"
        android:text="@string/welcome_register_button"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/light_black_btn"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        app:strokeColor="#747775"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/Welcome_login_btn"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/light_black_btn"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        android:text="@string/welcome_log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716"
        app:strokeColor="#747775"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/WelcomeLabel"
        android:layout_width="378dp"
        android:layout_height="47dp"
        android:text="@string/welcome_app_name"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

</androidx.constraintlayout.widget.ConstraintLayout>