<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".caloriecalculator.activities.CalorieCalculatorActivity"
    android:background="@drawable/background_img">


    <TextView
        android:id="@+id/calorie_calculator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_calculator_title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/calorie_calculator_age"
        android:layout_width="291dp"
        android:layout_height="61dp"
        android:hint="@string/calorie_calculator_age"
        android:text=""
        android:textColor="#ACACAC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/calorie_calculator_height"
        android:layout_width="292dp"
        android:layout_height="58dp"
        android:hint="@string/calorie_calculator_height"
        android:textColor="#ACACAC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />


    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="Male"
            android:textColor="#ACACAC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="126dp"
            android:layout_height="49dp"
            android:layout_below="@id/radioButton"
            android:text="Female"
            android:textColor="#ACACAC"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/calorie_calculator_weight"
        android:layout_width="292dp"
        android:layout_height="60dp"
        android:hint="@string/calorie_calculator_weight"
        android:textColor="#ACACAC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <Spinner
        android:id="@+id/calorie_calculator_activity_level_spinner"
        android:layout_width="292dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/calorie_calculator_button"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/light_black_btn"
        android:fontFamily="sans-serif"
        android:text="@string/calorie_calculator_button"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758"
        app:strokeColor="#747775"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>